[package]
name = "migrate"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "3.0", default-features = false, features = ["derive", "std"] }
log = "0.4"
mysql = "21.0"
rusqlite = "0.26"
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.11"
thiserror = "1.0"
toml = "0.5"
